added new shit for the one hundreth time

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<h1> Flashcards! </h1>
 			<div>
 				<button onclick = "showCreateCardBox()"> new card </button>
-				<button onclick = "delFlashcards()"> del card </button>
+				<button onclick = "delFlashcards()"> del all card </button>
+				<button onclick = "delOneCard()"> delete one card </button>
 			</div>
 		</div>
 	</div>
@@ -35,5 +36,6 @@
 </div>
 
 <script src="script.js"></script>
+<whaterverhwtaserve>
 </body>
 </html>
