--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1> Flashcards! </h1>
 			<div>
 				<button onclick = "showCreateCardBox()"> new card </button>
-				<button onclick = "delFlashcards()"> del all card </button>
+				<button onclick = "delFlashcards()"> delete all of the cards </button>
 				<button onclick = "delOneCard()"> delete one card </button>
 			</div>
 		</div>
